# preview

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  version.h.in
cmake/: cimg.cmake
